# oxidis

./: .env  .gitignore  Cargo.toml  README.md  configuration.yaml
migrations/: 20210421072707_create_subscriptions_table.sql
scripts/: init_db.bat  init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
