[package]
name = "oxidis"
version = "0.1.0"
authors = ["modulated <cowkingdom@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
warp = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
chrono = {version = "0.4", features = ["serde"]}
pretty_env_logger = "0.4"
log = "0.4"